--- a/index.html
+++ b/index.html
@@ -12,29 +12,43 @@
     <nav id="nav"> <!-- colocar um botão para cadastro aqui!!! -->
         <div class="navTop">
             <div class="navItem">
-                <img src="./img/soulfit_logo_white (1) (1).png" width="100" alt="">
+                <a href="../index.html">
+                    <img src="../img/soulfit_logo_white (1) (1).png" width="100" alt="">
+                </a>
             </div>
             <div class="navItem">
                 <div class="seach">
                     <input type="text" placeholder="Search..." class="searchInput">
-                    <img src="./img/search.png" width="20" height="20" alt="" class="searchIcon">
+                    <img src="../img/search.png" width="20" height="20" alt="" class="searchIcon">
                 </div>
             </div>
             <div class="navItem">
                 <!-- <span class="limitedOffer">
                     Oferta Limitada!</span> -->
-                    <a href="tela_de_login/login1.html">
-                        <button class="loginButton">ENTRE / CADASTRE-SE
-                        </button>
-                    </a>
+                    <a href="../tela_de_login/login1.html">ENTRE</a> / 
+                    <a href="../tela_de_cadastro/cadastro.html">CADASTRE-SE</a>
             </div>
         </div>
         <div class="navBotton">
-            <!-- <h3 class="menuItem">AIR FORCE</h3>
-            <h3 class="menuItem">BONÉS</h3>
-            <h3 class="menuItem">JAQUETAS</h3>
-            <h3 class="menuItem">SAIAS</h3>
-            <h3 class="menuItem">TOPS</h3> -->
+            <a href="#">
+                <h6 class="menuItem">CATEGORIAS</h6>
+            </a>
+
+            <a href="#">
+                <h6 class="menuItem">OFERTAS</h6>
+            </a>
+
+            <a href="#">
+                <h6 class="menuItem">HISTÓRICO</h6>
+            </a>
+
+            <a href="shopping_cart/index.html">
+                <h6 class="menuItem">CARRINHO</h6>
+            </a>
+
+            <a href="#">
+                <h6 class="menuItem">CONTATO</h6>
+            </a>
         </div>
     </nav>
 
@@ -305,7 +319,7 @@
             <!-- <h1 class="nsTitleSm">Nova Temporada</h1> -->
             <h1 class="nsTitleSm">Nova Coleção</h1>
             <a href="shopping_cart/index.html">
-                <button class="nsButton">ESCOLHA SEU ESTILO</button>
+                <button class="nsButton">ESCOLHA AQUI</button>
             </a>
         </div>
         <div class="nsItem">
