--- a/shopping_cart/index.html
+++ b/shopping_cart/index.html
@@ -5,8 +5,39 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 </head>
 <body>
+
+    <nav id="nav"> <!-- colocar um botão para cadastro aqui!!! -->
+        <div class="navTop">
+            <div class="navItem">
+                <a href="../index.html">
+                    <img src="../img/soulfit_logo_white (1) (1).png" width="100" alt="">
+                </a>
+            </div>
+            <div class="navItem">
+                <div class="seach">
+                    <input type="text" placeholder="Search..." class="searchInput">
+                    <img src="../img/search.png" width="20" height="20" alt="" class="searchIcon">
+                </div>
+            </div>
+            <div class="navItem">
+                <!-- <span class="limitedOffer">
+                    Oferta Limitada!</span> -->
+                    <a href="../tela_de_login/login1.html">ENTRE</a> / 
+                    <a href="../tela_de_cadastro/cadastro.html">CADASTRE-SE</a>
+            </div>
+        </div>
+        <div class="navBotton">
+            <!-- <h3 class="menuItem">AIR FORCE</h3>
+            <h3 class="menuItem">BONÉS</h3>
+            <h3 class="menuItem">JAQUETAS</h3>
+            <h3 class="menuItem">SAIAS</h3>
+            <h3 class="menuItem">TOPS</h3> -->
+        </div>
+    </nav>
+
     
     <div id="app"></div>
     <div id="temporaryContent">
